# agent-load-protocol

./: .gitignore  LOADING.md  README.md  SECRETS.md  SPEC.md  alp-action-plan.html  relevance-ai-feedback.txt  render.yaml
.github/: secrets.template.md
.github/workflows/: validate-schema.yml
alp-server/: README.md  pyproject.toml
alp-server/alp/: __init__.py  card.py  fastapi.py  flask.py  mcp.py  sse.py  tools.py
deploy/: README.md  fly.toml  railway.json  render.yaml
examples/: server.alp.json
examples/chat-window/: README.md  agent.alp.json
examples/custom-ui/: README.md  agent.alp.json  client.py
examples/github-native-agent/: README.md  agent.alp.json
examples/github-native-agent/.github/workflows/: deploy.yml
examples/hello-agent/: agent.alp.json
examples/hive-agent/: agent.alp.json
examples/platform-import/: README.md  agent.alp.json
examples/relevance-ai-agent/: agent.alp.json
examples/remote-card/: agents.json
reference/server/node/: README.md  alp_server.ts  package.json  tsconfig.json
reference/server/python/: alp_server.py  requirements.txt
releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.9.0.md
schema/: agent.alp.schema.json  write_schema.py
