[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alp-server"
version = "0.7.0"
description = "Agent Load Protocol — drop-in MCP/SSE middleware for any Python server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "agent", "alp", "fastapi", "llm", "kiro", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
flask = ["flask>=3.0.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.urls]
Homepage = "https://github.com/RodrigoMvs123/agent-load-protocol"
Repository = "https://github.com/RodrigoMvs123/agent-load-protocol"
Documentation = "https://github.com/RodrigoMvs123/agent-load-protocol/blob/main/SPEC.md"
"Bug Tracker" = "https://github.com/RodrigoMvs123/agent-load-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["alp"]